--- a/res/values-ar/values.xml
+++ b/res/values-ar/values.xml
@@ -74,4 +74,8 @@
 <string name="s4" msgid="9167523597401839819">"رفض"</string>
 <string name="s5" msgid="1566682516266724847">"إنشاء حدث تقويم"</string>
 <string name="s6" msgid="5996672174517137271">"هل تريد السماح للإعلان بإنشاء حدث تقويم؟"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/firebase-messaging/res/values-ar/strings.xml -->
+<eat-comment/>
+<string name="fcm_fallback_notification_channel_label" msgid="4133737464567140336">"متنوعة"</string>
 </resources>
