--- a/res/values-ja/values.xml
+++ b/res/values-ja/values.xml
@@ -74,4 +74,8 @@
 <string name="s4" msgid="9167523597401839819">"許可しない"</string>
 <string name="s5" msgid="1566682516266724847">"カレンダーの予定の作成"</string>
 <string name="s6" msgid="5996672174517137271">"広告がカレンダーの予定を作成することを許可しますか？"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/firebase-messaging/res/values-ja/strings.xml -->
+<eat-comment/>
+<string name="fcm_fallback_notification_channel_label" msgid="4133737464567140336">"その他"</string>
 </resources>
