--- a/res/values-ky/values.xml
+++ b/res/values-ky/values.xml
@@ -74,4 +74,8 @@
 <string name="s4" msgid="9167523597401839819">"Баш тартуу"</string>
 <string name="s5" msgid="1566682516266724847">"Жылнаама окуясын түзүү"</string>
 <string name="s6" msgid="5996672174517137271">"Жарнамада жылнаама окуясы түзүлсүнбү?"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/firebase-messaging/res/values-ky/strings.xml -->
+<eat-comment/>
+<string name="fcm_fallback_notification_channel_label" msgid="4133737464567140336">"Аралаш"</string>
 </resources>
