--- a/res/values-mk/values.xml
+++ b/res/values-mk/values.xml
@@ -74,4 +74,8 @@
 <string name="s4" msgid="9167523597401839819">"Одбиј"</string>
 <string name="s5" msgid="1566682516266724847">"Создај настан во календарот"</string>
 <string name="s6" msgid="5996672174517137271">"Дали дозволувате рекламата да создаде настан во календарот?"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/firebase-messaging/res/values-mk/strings.xml -->
+<eat-comment/>
+<string name="fcm_fallback_notification_channel_label" msgid="4133737464567140336">"Разно"</string>
 </resources>
