--- a/res/values-ml/values.xml
+++ b/res/values-ml/values.xml
@@ -74,4 +74,8 @@
 <string name="s4" msgid="9167523597401839819">"നിരസിക്കുക"</string>
 <string name="s5" msgid="1566682516266724847">"കലണ്ടർ ഇവന്റ് സൃഷ്ടിക്കുക"</string>
 <string name="s6" msgid="5996672174517137271">"കലണ്ടർ ഇവന്റ് സൃഷ്ടിക്കാൻ പരസ്യത്തെ അനുവദിക്കണോ?"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/firebase-messaging/res/values-ml/strings.xml -->
+<eat-comment/>
+<string name="fcm_fallback_notification_channel_label" msgid="4133737464567140336">"പലവക"</string>
 </resources>
