--- a/res/values-mr/values.xml
+++ b/res/values-mr/values.xml
@@ -74,4 +74,8 @@
 <string name="s4" msgid="9167523597401839819">"नकार द्या"</string>
 <string name="s5" msgid="1566682516266724847">"कॅलेंडर इव्हेंट तयार करा"</string>
 <string name="s6" msgid="5996672174517137271">"जाहिरातीस कॅलेंडर इव्हेंट तयार करण्याची परवानगी द्यायची?"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/firebase-messaging/res/values-mr/strings.xml -->
+<eat-comment/>
+<string name="fcm_fallback_notification_channel_label" msgid="4133737464567140336">"मिश्र"</string>
 </resources>
