--- a/res/values-ne/values.xml
+++ b/res/values-ne/values.xml
@@ -74,4 +74,8 @@
 <string name="s4" msgid="9167523597401839819">"अस्वीकार गर्नुहोस्"</string>
 <string name="s5" msgid="1566682516266724847">"पात्रोमा कार्यक्रम सिर्जना गर्नुहोस्"</string>
 <string name="s6" msgid="5996672174517137271">"विज्ञापनलाई पात्रोमा कार्यक्रम सिर्जना गर्न अनुमति दिने हो?"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/firebase-messaging/res/values-ne/strings.xml -->
+<eat-comment/>
+<string name="fcm_fallback_notification_channel_label" msgid="4133737464567140336">"विविध"</string>
 </resources>
