Fix: Move strings + styleables to "basement" (com.google.android.gms)

--- a/res/values-si/values.xml
+++ b/res/values-si/values.xml
@@ -76,4 +76,8 @@
 <string name="s5" msgid="1566682516266724847">"දින දර්ශන සිදුවීම සාදන්න"</string>
 <string name="s6" msgid="5996672174517137271">"වෙළඳ දැන්වීමට දින දර්ශන සිදුවීමක් සෑදීමට ඉඩ දෙන්නද?"</string>
 <string name="s7" msgid="7163549807207034258">"පරීක්ෂණ වෙළඳ දැන්වීම"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/dev/client/firebase-messaging/res/values-si/strings.xml -->
+<eat-comment/>
+<string name="fcm_fallback_notification_channel_label" msgid="4133737464567140336">"විවිධ"</string>
 </resources>
