--- a/res/values-fr/values.xml
+++ b/res/values-fr/values.xml
@@ -76,4 +76,8 @@
 <string name="s5" msgid="1566682516266724847">"Créer un événement d\'agenda"</string>
 <string name="s6" msgid="5996672174517137271">"Autoriser l\'annonce à créer un événement d\'agenda ?"</string>
 <string name="s7" msgid="7163549807207034258">"Annonce test"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/dev/client/firebase-messaging/res/values-fr/strings.xml -->
+<eat-comment/>
+<string name="fcm_fallback_notification_channel_label" msgid="4133737464567140336">"Divers"</string>
 </resources>
