--- a/res/values-is/values.xml
+++ b/res/values-is/values.xml
@@ -76,4 +76,8 @@
 <string name="s5" msgid="1566682516266724847">"Búa til dagatalsviðburð"</string>
 <string name="s6" msgid="5996672174517137271">"Leyfa auglýsingu að búa til dagatalsviðburð?"</string>
 <string name="s7" msgid="7163549807207034258">"Prófa auglýsingu"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/dev/client/firebase-messaging/res/values-is/strings.xml -->
+<eat-comment/>
+<string name="fcm_fallback_notification_channel_label" msgid="4133737464567140336">"Ýmislegt"</string>
 </resources>
