--- a/res/values-it/values.xml
+++ b/res/values-it/values.xml
@@ -76,4 +76,8 @@
 <string name="s5" msgid="1566682516266724847">"Crea evento di calendario"</string>
 <string name="s6" msgid="5996672174517137271">"Consentire ad AdMob di creare un evento di calendario?"</string>
 <string name="s7" msgid="7163549807207034258">"Annuncio di testo"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/dev/client/firebase-messaging/res/values-it/strings.xml -->
+<eat-comment/>
+<string name="fcm_fallback_notification_channel_label" msgid="4133737464567140336">"Varie"</string>
 </resources>
