--- a/res/values-ml/values.xml
+++ b/res/values-ml/values.xml
@@ -76,4 +76,8 @@
 <string name="s5" msgid="1566682516266724847">"കലണ്ടർ ഇവന്റ് സൃഷ്ടിക്കുക"</string>
 <string name="s6" msgid="5996672174517137271">"കലണ്ടർ ഇവന്റ് സൃഷ്ടിക്കാൻ പരസ്യത്തെ അനുവദിക്കണോ?"</string>
 <string name="s7" msgid="7163549807207034258">"പരസ്യം പരീക്ഷിക്കുക"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/dev/client/firebase-messaging/res/values-ml/strings.xml -->
+<eat-comment/>
+<string name="fcm_fallback_notification_channel_label" msgid="4133737464567140336">"പലവക"</string>
 </resources>
