--- a/res/values/values.xml
+++ b/res/values/values.xml
@@ -326,4 +326,8 @@
 <string name="s5">Create calendar event</string>
 <string name="s6">Allow Ad to create a calendar event?</string>
 <string name="s7">Test Ad</string>
+
+<!-- java/com/google/android/gmscore/dev/client/firebase-messaging/res/values/strings.xml -->
+<eat-comment/>
+<string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
 </resources>
