--- a/res/values-zh-rTW/values.xml
+++ b/res/values-zh-rTW/values.xml
@@ -78,4 +78,8 @@
 <string name="s5" msgid="1566682516266724847">"建立日曆活動"</string>
 <string name="s6" msgid="5996672174517137271">"要允許廣告建立日曆活動嗎？"</string>
 <string name="s7" msgid="7163549807207034258">"測試廣告"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-llvm-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/dev/client/firebase-messaging/res/values-zh-rTW/strings.xml -->
+<eat-comment/>
+<string name="fcm_fallback_notification_channel_label" msgid="4133737464567140336">"其他"</string>
 </resources>
